# fixtext

./: .gitignore  README.md  brfast.sh  build.zig  fixtext.py  formats.py  index.html  package.json  pyproject.toml
src/: App.css  App.tsx  main.zig
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
