[package]
name = "fixtext"
version = "0.1.0"
description = "Configurable clipboard text fixer"
authors = ["FixText"]
edition = "2024"
rust-version = "1.95"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fixtext_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Networking_WinHttp",
  "Win32_Security",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Registry",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }

[profile.dev]
incremental = true
debug = 0

[profile.release]
incremental = true
lto = false
codegen-units = 16
debug = 0
strip = "symbols"
